  libraries, creating uncertainty/bugs in using QString easily, and (to a lesser
  extent) performance issues.

* QTextCodec::codecForTr() and QTextCodec::setCodecForTr() have been removed,
  QCoreApplication::Encoding value CodecForTr is now obsolete, use
  DefaultCodec instead. For reasoning, see the codecForCStrings() removal above.

* QIntValidator and QDoubleValidator no longer fall back to using the C locale if
  the requested locale fails to validate the input.

* A new set of classes for doing pattern matching with Perl-compatible regular
  expressions has been added: QRegularExpression, QRegularExpressionMatch and
  QRegularExpressionMatchIterator. They aim to replace QRegExp with a more
  powerful and flexible regular expression engine.

* QEvent::AccessibilityPrepare, AccessibilityHelp and AccessibilityDescription removed:
  * The enum values simply didn't make sense in the first place and should simply be dropped.

* [QTBUG-23529] QHash is now more resilient to a family of denial of service
  attacks exploiting algorithmic complexity, by supporting two-arguments overloads
  of the qHash() hashing function.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

* A new set of enabler classes have been added, most importantly QWindow, QScreen,
  QSurfaceFormat, and QOpenGLContext.

* Most of the useful QtOpenGL classes have been polished and moved into
  QtGui. See QOpenGLFramebufferObject, QOpenGLShaderProgram,
  QOpenGLFunctions, etc.

* QOpenGLPaintDevice has been added to be able to use QPainter to render into
  the currently bound context.

QtWidgets
---------